improved security, user CRUD, swagger, tests and documentation